--- a/CSS/style.css
+++ b/CSS/style.css
@@ -155,3 +155,29 @@ header {
 .note.fixed{
     background-color: #40352C ;
 }
+
+@media(max-width: 450px) {
+
+    header {
+        flex-direction: column;
+        gap: 1rem;
+        width: 100%;
+    }
+
+    #search-cotainer {
+        width: 100%;
+    }
+
+    #search-input {
+        width: 100%;
+    }
+
+    #add-note-container {
+        width: 100%;
+        padding: 0 2rem;
+    }
+
+    #notes-container {
+        grid-template-columns: repeat(auto-fill,100%);
+    }
+}
